<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Future Workshops. All rights reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.futureworkshops.notifiable.sample.NotifiableActivity">

        <Button
            android:id="@+id/btn_register_with_name"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_register_with_name"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_register_anonymously"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_register_anonymously"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_update_device_info"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_update_device"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_update_device_name"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_update_device_name"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_update_device_locale"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_update_device_locale"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_update_device_token"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_update_device_token"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_assign_device_to_user"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_assign_device_to_user"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_unassign_device_from_user"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_unassign_device_from_user"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_unregister_device"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/action_unregister_device"
            android:visibility="gone"
            tools:visibility="visible" />


        <Button
            android:id="@+id/btn_mark_notification"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/action_mark_notification_as_opened"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>